force-app/main/default/objects/OpportunityLineItem/fields/Amount_Shipping_In_Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Amount_Shipping_In_Close_Quarter__c</fullName>
    <description>Amount of Shipping in Close Quarter</description>
    <formula>IF(  Shipping_In_Close_Quarter__c &gt; 0, 
Shipping_In_Close_Quarter__c * UnitPrice, 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Shipping In Close Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>