force-app/main/default/objects/OpportunityLineItem/fields/Applied_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Applied_Discount_Percentage__c</fullName>
    <description>DCP-50975 Opp Mgmt: Add &quot;Applied Discount Percentage&quot; field to Opportunity Product</description>
    <label>Applied Discount Percentage</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>