force-app/main/default/objects/OpportunityLineItem/fields/By_Pass_Sync_To_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>By_Pass_Sync_To_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automated By Process Builder</description>
    <label>By Pass Sync To Opportunity</label>
    <type>Checkbox</type>
</CustomField>