force-app/main/default/objects/OpportunityLineItem/fields/Customer_Applied_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Customer_Applied_Discount_Percentage__c</fullName>
    <description>Created as a part of story 13016 while adding new columns to the cart.</description>
    <label>Customer Applied Discount Percentage</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>