force-app/main/default/objects/OpportunityLineItem/fields/Customer_Specific_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specific_Price__c</fullName>
    <businessOwnerUser>cmulkey@illumina.com</businessOwnerUser>
    <defaultValue>&quot;Click Update Pricing&quot;</defaultValue>
    <description>Per product price for this customer after customer based discounts are applied.</description>
    <label>Customer Specific Price</label>
    <length>225</length>
    <type>Text</type>
</CustomField>