force-app/main/default/objects/OpportunityLineItem/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date field to store End Date of Line Item</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>