force-app/main/default/objects/OpportunityLineItem/fields/ERP_Line_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Line_Number_Id__c</fullName>
    <description>External Id field to store ERP Line Number</description>
    <externalId>true</externalId>
    <label>ERP Line Number Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>