force-app/main/default/objects/OpportunityLineItem/fields/Has_Informatics_Product__c.field-meta.xml
<CustomField>
    <fullName>Has_Informatics_Product__c</fullName>
    <description>Checks if Opportunity Line Item is an Informatics Product</description>
    <formula>CONTAINS(
    $CustomMetadata.Code_Parameter__mdt.Informatics_Product_Families.PickListValue__c,
    &apos;&quot;&apos;&amp;  PricebookEntry.Product2.Informatics_Family__c  &amp;&apos;&quot;&apos;
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Informatics Product?</label>
    <type>Checkbox</type>
</CustomField>