force-app/main/default/objects/OpportunityLineItem/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <businessOwnerUser>cmulkey@illumina.com</businessOwnerUser>
    <defaultValue>&quot;Click Update Pricing&quot;</defaultValue>
    <description>Unit price of the product.</description>
    <label>List Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>