force-app/main/default/objects/OpportunityLineItem/fields/OptionId__c.field-meta.xml
<CustomField>
    <fullName>OptionId__c</fullName>
    <description>Lookup to Option Product</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>