force-app/main/default/objects/OpportunityLineItem/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <description>Created as a part of story 13016 while adding new columns to the cart.</description>
    <label>Premium %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>