force-app/main/default/objects/OpportunityLineItem/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Long Text Area field to store Serial Number</description>
    <label>Serial Number</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>