force-app/main/default/objects/OpportunityLineItem/fields/Shipping_In_2Q_After_Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Shipping_In_2Q_After_Close_Quarter__c</fullName>
    <description>Line item level quantity estimated to ship in second quarter after fiscal quarter in which opportunity is projected to close.</description>
    <label>Shipping In 2Q After Close Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>