force-app/main/default/objects/OpportunityLineItem/fields/Shipping_In_Close_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Shipping_In_Close_Quarter__c</fullName>
    <description>Line item level quantity estimated to ship in fiscal quarter in which opportunity is projected to close</description>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Line item level quantity estimated to ship in fiscal quarter in which opportunity is projected to close.</inlineHelpText>
    <label>Shipping In Close Quarter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>