force-app/main/default/objects/OpportunityLineItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date field to store Start Date of Line Item</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>