force-app/main/default/objects/OpportunityLineItem/validationRules/CheckOptyLineItemHasShippingInCloseQtr.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOptyLineItemHasShippingInCloseQtr</fullName>
    <active>true</active>
    <description>Checks if the Shipping In Close Quarter field is blank , then user should not be allowed to add Product.</description>
    <errorConditionFormula>/* Checks if the Shipping In Close Quarter Field is Blank */
AND (
    NOT($Permission.Sales_Integration_User ),
    OR ( 
        Opportunity.RecordType.DeveloperName = $Label.OpportunityRTIndirectStandard, 
        Opportunity.RecordType.DeveloperName = $Label.IndirectReOrder, 
        Opportunity.RecordType.DeveloperName = $Label.IndirectFieldServices 
     ),
     AND(
         ISBLANK ( Shipping_In_Close_Quarter__c ),
         ISBLANK ( Shipping_In_1Q_After_Close_Quarter__c ),
         ISBLANK ( Shipping_In_2Q_After_Close_Quarter__c )
     ) 
)</errorConditionFormula>
    <errorDisplayField>Shipping_In_Close_Quarter__c</errorDisplayField>
    <errorMessage>Please provide value for &quot;Shipping in Close Quarter&quot;.</errorMessage>
</ValidationRule>