force-app/main/default/objects/OpportunityLineItem/validationRules/CheckOptyLineItemQtyGtrShippingInClsQtr.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOptyLineItemQtyGtrShippingInClsQtr</fullName>
    <active>true</active>
    <description>Checks if the sum of Shipping In Close Quarter fields is greater than product quantity, then user should not be allowed to add or edit Product.</description>
    <errorConditionFormula>IF (
    AND (
        IF (
            AND(
                ISBLANK ( Shipping_In_1Q_After_Close_Quarter__c ),
                NOT ( ISBLANK ( Shipping_In_2Q_After_Close_Quarter__c ) )
            ),
            Shipping_In_Close_Quarter__c + Shipping_In_2Q_After_Close_Quarter__c  &gt; Quantity,
            IF (
                AND (
                    ISBLANK ( Shipping_In_2Q_After_Close_Quarter__c ),
                    NOT ( ISBLANK ( Shipping_In_1Q_After_Close_Quarter__c ) )
                ),
                Shipping_In_Close_Quarter__c + Shipping_In_1Q_After_Close_Quarter__c  &gt; Quantity,
                IF (
                    AND (
                        ISBLANK ( Shipping_In_1Q_After_Close_Quarter__c ),
                        ISBLANK ( Shipping_In_2Q_After_Close_Quarter__c ) 
                    ),
                    Shipping_In_Close_Quarter__c &gt; Quantity,
                    IF (
                        AND (
                            NOT ( ISBLANK ( Shipping_In_1Q_After_Close_Quarter__c ) ),
                            NOT ( ISBLANK ( Shipping_In_2Q_After_Close_Quarter__c ) )
                        ),
                        Shipping_In_Close_Quarter__c + Shipping_In_1Q_After_Close_Quarter__c + Shipping_In_2Q_After_Close_Quarter__c &gt; Quantity,
                        false
                    )
                )
            )
        )
    ),
    true,
    false
)</errorConditionFormula>
    <errorMessage>Please update shipping in close quarter attributes, cannot exceed total quantity.</errorMessage>
</ValidationRule>